--- a/style.css
+++ b/style.css
@@ -224,9 +224,20 @@
 
   /* universal pc size */
   .pcsize {
-    width: 10%;
+    width: 100px;
     height: auto;
   border-radius: 5px;
   }
+  .hidden {
+    opacity: 0;
+    filter: blur(10px);
+    transform: translateX(-100%);
+    transition: all 2s;
+}
 
+.show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translate(0);
+}
   
