--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@
     background-color: var(--bg-primary);
     transition: width 600ms ease;
     overflow-x: hidden;
+    z-index: 1;
   }
   
   .navbar-nav {
